[gd_scene load_steps=11 format=2]

[ext_resource path="res://GHBigFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://GHAttack.tres" type="Theme" id=2]
[ext_resource path="res://bg2.png" type="Texture" id=3]
[ext_resource path="res://TopMenu.gd" type="Script" id=4]
[ext_resource path="res://GHFlatBox.tres" type="StyleBox" id=5]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=4]

[node name="TopMenu" type="PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 2 )
custom_styles/panel = ExtResource( 5 )
script = ExtResource( 4 )

[node name="TopMenuBack" type="TextureRect" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 415.0
margin_bottom = 540.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 2

[node name="TopMenuGrid" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 415.0
margin_bottom = 540.0

[node name="ChooseDecks" type="Button" parent="TopMenuGrid"]
margin_right = 411.0
margin_bottom = 104.0
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = SubResource( 2 )
text = " Choose Decks "

[node name="EditDeck" type="Button" parent="TopMenuGrid"]
margin_top = 108.0
margin_right = 411.0
margin_bottom = 212.0
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = SubResource( 3 )
text = "Edit Deck"

[node name="EndButton" type="Button" parent="TopMenuGrid"]
margin_top = 216.0
margin_right = 411.0
margin_bottom = 320.0
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = SubResource( 6 )
text = "End of Round"

[node name="Preferences" type="Button" parent="TopMenuGrid"]
margin_top = 324.0
margin_right = 411.0
margin_bottom = 428.0
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = SubResource( 5 )
text = "Preferences"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelTop" type="Button" parent="TopMenuGrid"]
margin_top = 432.0
margin_right = 411.0
margin_bottom = 536.0
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = SubResource( 4 )
text = "Cancel"

[connection signal="pressed" from="TopMenuGrid/ChooseDecks" to="." method="_on_ChooseDecks_pressed"]
[connection signal="pressed" from="TopMenuGrid/EditDeck" to="." method="_on_EditDeck_pressed"]
[connection signal="pressed" from="TopMenuGrid/EndButton" to="." method="_on_EndButton_pressed"]
[connection signal="pressed" from="TopMenuGrid/Preferences" to="." method="_on_Preferences_pressed"]
[connection signal="pressed" from="TopMenuGrid/CancelTop" to="." method="_on_CancelTop_pressed"]
